SERVER-67544 Add initializer list for Cloner::BatchHandler